@@ -3,6 +3,8 @@
     - Date element, year menu now supports 'reverse' option to reverse order
       of year list. - patch from Ozum Eldogan.
 
+    - New Element::Block method auto_block_id().
+
     - Bugfix: after submission, group-type fields were getting the wrong value
       when multiple fields had the same name. - patch by Doug Orleans.
 
